# rtar-ddeps

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: config
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: fix.yml  idea.yml  todo.yml
env/: Dockerfile  dvc.json  python.json  requirements.txt
example/: data_dependencies.yml  data_structure.yml
scripts/misc/setup/: container_git_setup.sh  container_setup.sh  dvc_setup.ps1  dvc_setup.sh  nbstripout.ps1  nbstripout.sh
src/rtar_ddeps/: cli.py
src/rtar_ddeps/validation/: base_validator.py  custom_yaml_loader.py  data_dependencies_validator.py
src/rtar_ddeps/validation/schemas/: data_dependencies_schema.py
tests/data/data_dependencies/: error_circular_dependency.yml  error_dict_empty_keys.yml  error_dict_has_columns.yml  error_duplicate_key.yml  error_empty_definition.yml  error_empty_definition_more.yml  error_invalid_format.yml  error_missing_required.yml  error_missing_required_more.yml  error_no_key_dict.yml  error_no_keys_in_dict.yml  error_no_name_in_dict.yml  error_reference.yml  error_reference_missing_param_key.yml  error_rules.md  error_terms.yml  error_type_mismatch.yml  error_type_mismatch_more.yml  error_variable_columns.yml  normal.yml  warning_empty_recommended.yml  warning_empty_recommended_more.yml  warning_unexpected_format.yml  warning_variable_columns.yml
tests/validation/: test_data_dependencies_validator.py
