[tool.poetry]
name = "rtar-ddeps"
version = "0.1.0"
description = "A Python package to manage and utilize data dependency definition files (data_dependencies.yml) used in the rtar framework."
authors = ["Y Sakashita <73250095+sakashita44@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12" # env/python.json のバージョンに合わせる
voluptuous = "^0.15.2" # requirements.txt から
pyyaml = "^6.0.2" # requirements.txt から

[tool.poetry.dev-dependencies]
pytest = "^8.3.5" # requirements.txt から

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
